<resources>
    <string name="app_name">XIVE</string>

    <string name="non_member"><u>비회원으로 둘러보기</u></string>
    <string name="network_err_msg_guide"><u>다시 시도</u></string>

    <string name="onboarding1_text1">스마트 티켓을 태깅해보세요</string>
    <string name="onboarding1_text2">스마트 티켓은 NFC 태깅이 가능한\n카이브만의 서비스예요</string>
    <string name="onboarding2_text1">스캔 한 번에 모든 콘텐츠를</string>
    <string name="onboarding2_text2">카이브만의 독점 콘텐츠를 확인해보세요</string>
    <string name="onboarding3_text1">문화생활을 더 즐겁게</string>
    <string name="onboarding3_text2">내 손 안의 문화생활 플랫폼, 카이브와 함께해요!</string>
    <string name="home_null_text">스마트 티켓을 등록해주세요</string>

    <string name="ticket_period">%1$s - %2$s</string>
    <string name="ticket_is_purchase">예매완료</string>
    <string name="ticket_is_not_purchase">예매하기</string>

    <string name="calendar_popup_title">%1$d월 %2$d일</string>

    <string name="nfc_guide_title">스캔 준비 완료</string>
    <string name="nfc_guide_content">기기 뒷면을 XIVE NFC에 태그</string>


    <string name="word_count">%s/500</string>

    <string name="withdrawal">탈퇴하시면 개인정보 처리 방침에 따라 최대 30일 이내에\n\‘%1$s\'님의 모든 개인정보 및 계정 정보가 삭제됩니다.\n이후에는 \‘%2$s\'님의 앱 내 활동 데이터는 다시 복구될 수 없습니다.</string>

    <string name="pp_1">개인정보 처리방침은 ‘XIVE(카이브)’의 특정 가입 절차를 거친 이용자들이 이용 가능한 서비스를 제공함에 있어, 개인정보를 어떻게 수집·이용·보관·파기하는지에 대한 정보를 담은 방침을 의미합니다. ‘XIVE(카이브)’는 개인정보 처리방침에 따라 개인정보보호법 등 국내 개인정보 보호 법령은 모두 준수하고 있음을 알려드립니다.</string>
    <string name="pp_2">‘XIVE(카이브)’은 더 나은 서비스 제공을 위해 다음 항목 중 최소한의 개인정보를 수집합니다.\n\n1) 회원가입 시 수집되는 개인정보(필수)\n회원 이름, 회원 닉네임, 이메일 계정, 비밀번호(해독이 불가능하도록 암호화하여 저장), 서비스 버전, OS, OS 버전, 디바이스 모델명, 단말 고유 ID(‘회사’가 ‘회원’의 단말에 무작위로 부여하는 ID), Time Zone\n이 외에도 ‘회사’는 서비스 이용과정에서 서비스 이용기록, 접속 로그, 쿠키, 접속 IP 정보, 아이디 등이 자동으로 생성된 정보를 수집할 수 있습니다.</string>
    <string name="pp_3">수집된 개인정보는 다음의 목적에 한하여 활용됩니다.\n\n1. 가입 및 탈퇴 의사 확인, 회원 식별\n2. 서비스 제공 및 기존·신규 시스템 개발·유지·개선\n3. 불법·약관 위반 게시물 게시 등 부정행위 방지를 위한 운영 시스템 개발·유지·개선\n4. 문의·제휴·광고·이벤트·게시 관련 요청 응대 및 처리\n5. 서비스 제공 및 고도화</string>
    <string name="pp_4">‘XIVE(카이브)’은 회원의 개인정보를 제3자에게 제공하지 않습니다. 단, 다음의 사유가 있을 경우 제공할 수 있습니다.\n\n1. 이용자의 생명이나 안전에 급박한 위험이 확인되어 이를 해소하기 위한 경우\n2. 관련법에 따른 규정에 의한 경우\n3. 관리자의 경우(가입자 식별을 위해)\n4. 서비스 악성 활용, 스팸 유저의 식별 및 처리의 경우\n5. ‘서비스 이용 약관’ 위반의 경우</string>
    <string name="pp_5">‘XIVE(카이브)’는 서비스를 제공하는 동안 개인정보 처리방침 및 관련법에 의거하여 회원의 개인정보를 지속적으로 관리 및 보관합니다. 탈퇴 등 개인정보 수집 및 이용목적이 달성될 경우, 수집된 개인정보는 즉시 또는 다음과 같이 일정 기간 이후 파기됩니다.\n\n1. 가입시 수집된 개인정보: 탈퇴 후 30일\n2. 기기 정보 및 로그 기록: 최대 1년\n3. 삭제된 콘텐츠 기록: 삭제 후 30일</string>
    <string name="pp_6">회원은 언제든지 서비스 내부 ‘마이페이지’에서 자신의 개인정보를 조회하거나 수정, 삭제, 탈퇴를 할 수 있습니다.</string>
    <string name="pp_7">쿠키란 웹사이트를 운영하는 데 이용되는 서버가 귀하의 브라우저에 보내는 아주 작은 텍스트 파일로서 귀하의 컴퓨터 및 모바일 기기에 저장됩니다. 서비스는 사이트 로그인을 위해 아이디 식별에 쿠키를 사용할 수 있습니다.</string>
    <string name="pp_8">‘XIVE(카이브)’는 회원의 개인정보를 최선으로 보호하고 관련된 불만을 처리하기 위해 노력하고 있습니다. 관련 문의사항은 책임자(이형기, dlgudrl1203@gmail.com )를 통해 전달해주시기 바랍니다.</string>
    <string name="pp_9">이 개인정보 처리방침은 2024년 04월 10일에 최종적으로 개정되었습니다.</string>

    <string name="tc_1">다음의 기술한 ‘서비스 이용 약관’에는 ‘XIVE(카이브)’ 서비스 이용을 위해 유저가 이행해야 할 항목들과 ‘XIVE(카이브)’ 서비스 프로덕트 관리자가 이행해야 할 항목을 열거하여 명시되어 있습니다. 어떤 경우에도 본 서비스를 이용하려면 귀하는 대한민국(Republic of Korea) 연령 기준 만 9세 이상이어야 합니다</string>
    <string name="tc_2">‘XIVE(카이브)’ 서비스를 이용하는 모든 사용자의 경우 다음 행위가 금지됩니다.\n\n• 거짓 정보를 제공하거나 불법 행위를 저지르거나 오해의 소지가 있거나 사기성이 있거나 다른 사람의 권리를 침해(허락 없이 다른 사람의 콘텐츠를 사용하는 경우 포함)하는 행위\n• 스팸, 괴롭힘, 나체 이미지 게시 등의 비도덕적인 커뮤니티 이용\n• 가짜 계정을 만들거나 엑세스 권한이 없는 정보를 수집하거나 계정(또는 좋아요 및 팔로워 등의 계정의 일부)을 구매, 판매 또는 양도하거나 다른 사람의 계정에 로그인하는 행위\n• 유저 이름에 도메인 또는 URL을 사용하는 행위\n• 바이러스를 전송하는 행위, 본 서비스상에서 오버로딩(overloading), 플러딩(flooding) 또는 스패밍(spamming)을 실행하는 행위 등을 포함하여 사용자, 호스트 또는 네트워크의 접근을 방해하거나 중단시키는 행위 혹은 그러한 방해나 중단을 시도하는 행위 또는 본 서비스를 방해하거나 본 서비스상에서 심한 과부하를 일으키는 식으로 콘텐츠의 생성을 스크립팅(scripting)하는 행위\n• 아티스트 및 공연/예술 등의 유관 사업에서의 저작권을 위반하는 행위\n• 현재 사용 가능한 인터페이스 이외의 방법으로 본 서비스에 접근하는 행위\n• 이 서비스의 비공개 영역, 당사의 컴퓨터 시스템 또는 당사 제공업체의 기술 전송 시스템에 엑세스하거나 이를 무단으로 변경 및 이용하는 행위\n• 시스템 또는 네트워크의 취약성을 검사, 스캔 또는 테스트하거나 보안 조치 내지 인증 조치를 위반하거나 위반/우회하는 모든 행위</string>
    <string name="tc_3">당사가 관련 법령에 따라 법률상 책임을 지는 경우를 제외하면, 유저는 유저 스스로의 본 서비스의 이용과 유저가 제공하는 콘텐츠(귀하의 콘텐츠가 관련 법률, 규정, 규칙을 준수하는지 여부 포함)에 대하여 책임이 있습니다. 유저는 유저 스스로가 타인과 편하게 공유할 수 있는 콘텐츠만을 제공하여야 합니다. ‘XIVE(카이브)’에 기록하는 모든 콘텐츠의 소유권은 게시자에게 있습니다. 다만, 콘텐츠 제작에 사용되는 모든 데이터는 그 출처에 소유권이 있습니다. ‘커뮤니티 가이드라인’ 및 기타 비도덕적인 행위가 적발될 경우 콘텐츠가 삭제되거나 계정이 제한 또는 삭제될 수 있습니다.</string>
    <string name="tc_4">당사는 이용자에게 더 나은 서비스를 제공하기 위하여 이용자가 ‘XIVE(카이브)’를 이용하는 과정에서 발생하는 활동 데이터(티켓 기록, 커뮤니티 활동 등을 의미합니다)를 저장하여 ‘XIVE(카이브)’ 서비스의 성능 향상 및 추천 시스템 개선 등의 목적으로 활용할 수 있습니다.</string>
    <string name="tc_5">‘XIVE(카이브)’는 회원의 개인정보를 최선으로 보호하고 관련된 불만을 처리하기 위해 노력하고 있습니다. \n• 당사는 서비스를 이용하는 유저로부터 제기되는 의견이나 불만이 정당하다고 인정할 경우 이를 처리하여야 합니다. 이때 처리과정에 대해서 고객에게 메일 및 알림 등의 방법으로 전달합니다.\n• 당사는 정보통신망 이용촉진 및 정보보호에 관한 법률, 통신비밀보호법, 전기통신사업법 등 서비스의 운영, 유지와 관련 있는 법규를 준수합니다.\n• 관련 문의사항은 책임자(이형기, dlgudrl1203@gmail.com )를 통해 전달해주시기 바랍니다.</string>
    <string name="tc_6">본 약관의 준거법은 대한민국 법으로 하며, 본 약관과 관련하여 소송이 제기되는 경우 민사소송법 상의 관할 법원을 재판관할을 갖는 법원으로 합니다. 이 ‘서비스 이용 약관’은 2024년 04월 10일에 최종적으로 개정되었습니다.</string>

    <string name="error_1">현재 접속이 원활하지 않아요.</string>
    <string name="error_2">일시적인 오류로 서비스에 접속할 수 없습니다.\n잠시 후 다시 시도해 주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>