<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".setting.PrivacyPolicyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/all_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingTop="16dp"
            android:text="개인정보 처리 방침"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backBtn" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:text="1. 개인정보 처리 방침"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:layout_marginTop="16dp"
                    android:text="@string/pp_1"/>
                <View
                    android:id="@+id/rectangle1"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2. 커뮤니티 가이드라인"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_2"/>
                <View
                    android:id="@+id/rectangle2"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3. 수집한 개인정보의 처리 목적"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_3"/>
                <View
                    android:id="@+id/rectangle3"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4. 개인정보의 제3자 제공"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_4"/>
                <View
                    android:id="@+id/rectangle4"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5. 수집한 개인정보의 보관 및 파기"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_5"/>
                <View
                    android:id="@+id/rectangle5"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="6. 정보주체의 권리, 의무 및 행사"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_6"/>
                <View
                    android:id="@+id/rectangle6"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="7. 쿠키"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_7"/>
                <View
                    android:id="@+id/rectangle7"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="8. 개인정보에 관한 책임자 및 서비스"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_8"/>
                <View
                    android:id="@+id/rectangle8"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="#F4F4F4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="9. 기타"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>
                <TextView
                    android:id="@+id/text9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="48dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="4sp"
                    android:gravity="top"
                    android:text="@string/pp_9"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>